chore: update api route name to /chat
